# sdpype

./: .gitignore  DATA_SOURCES_REFERENCE.md  DDR_METRIC_README.md  PLAUSIBLE_VALIDATOR_README.md  POST_TRAINING_METRICS_GUIDE.md  README.md  aggregate_hybrid_stratified_metrics_cli.py  aggregate_metrics_cli.py  batch_trace.py  batch_train.py  compute_metrics_cli.py  ddr_metric.py  dvc.yaml  hallucination_score.py  k_anonymity_cli.py  main.py  mimic_iii_baseline_params_generator_cli.py  params.yaml  plausible_validator.py  prepare_mimic_cli.py  prepare_mimic_iii_cli.py  prepare_mimic_iii_mini_cli.py  pyproject.toml  recursive_train.py  sdmetrics_quality_cli.py  test_encoding_loader.py  test_gpu.py  test_post_training_metrics.sh  test_synthpop_cart.py  trace_chain.py
config/: config.yaml
config/evaluation/: basic.yaml
config/preprocessing/: none.yaml  standard.yaml
config/sdg/: ctgan.yaml  gaussian.yaml  synthcity_ctgan.yaml  synthcity_ddpm.yaml  synthcity_marginal_coupling.yaml  synthcity_nflow.yaml  synthcity_tvae.yaml
docs/: synthcity-model-saving-guide.md
experiments/configs/encoding/: default.yaml  example_covid.yaml
pypyr/: sdg-sweep.yaml  seed-variance.yaml  variance-sweep.yaml
queries/: MIMIC-III-mini-cire-validation.sql  MIMIC-III-mini-core-validation.sql  ddr.sql  mimic_iii_validation.sql  validation.sql
queries/ddr/: ddr.sql  duplicates.sql  hallucinations.sql  population_matches.sql  summary.sql  training_copies.sql
sdpype/: __init__.py  __main__.py  detect.py  encode_evaluation.py  encode_training.py  encoding.py  evaluate.py  evaluate_downstream.py  generation.py  hallucination_evaluation.py  label_encoding.py  main.py  metadata.py  post_processing.py  preprocess.py  privacy_evaluation.py  serialization.py  training.py
sdpype/cli/: __init__.py  downstream.py  main.py  metrics.py  model.py
sdpype/core/: data_valuation.py  downstream.py  experiment.py  metrics.py  models.py  pipeline.py  setup.py  status.py
sdpype/evaluation/: __init__.py  detection.py  downstream.py  hallucination.py  intrinsic.py  statistical.py
sdpype/utils/: console.py
tests/: generate_test_mimic_iii_data.py  test_mimic_iii_validation.py
